--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,8 @@ workflows:
     name: iOS Native
     max_build_duration: 120
     instance_type: mac_mini_m2
+    integrations:
+      app_store_connect: codemagic
     scripts:
       - name: Install CocoaPods dependencies
         script: |
